# Forge-OS

./: .gitignore  Cargo.toml  Makefile  README.md  install-arch.sh
forge-clip/: Cargo.toml
forge-clip/src/: main.rs
forge-compositor/: Cargo.toml
forge-compositor/src/: decorations.rs  drm.rs  input.rs  main.rs  state.rs
forge-compositor/src/grabs/: mod.rs
forge-compositor/src/handlers/: compositor.rs  data_device.rs  mod.rs  seat.rs  xdg_shell.rs
forge-config/: Cargo.toml
forge-config/src/: lib.rs
forge-drm-sys/: Cargo.toml  build.rs
forge-drm-sys/src/: lib.rs
forge-greeter/: Cargo.toml
forge-greeter/src/: main.rs  pam_auth.rs  session.rs
forge-installer/: forge-installer  forge-installer.qml
forge-notifications/: Cargo.toml
forge-notifications/src/: client.rs  main.rs
forge-privilege/: Cargo.toml  org.forge.Privilege.conf  org.forge.Privilege.policy
forge-privilege/src/: client.rs  main.rs
forge-screenshot/: Cargo.toml
forge-screenshot/src/: main.rs
forge-session/: Cargo.toml
forge-session/src/: main.rs
forge-settings/: Cargo.toml
forge-settings/qml/: SettingsWindow.qml
forge-settings/src/: main.rs
forge-setup/: forge-setup  forge-setup.qml
forge-shell/: .qmlls.ini  Cargo.toml
forge-shell/direct/: forge-shell-direct  forge-shell-direct.qml  generate-data.sh
forge-shell/qml/: Desktop.qml  NotificationPopup.qml  Panel.qml  Shell.qml  StartMenu.qml  SystemTray.qml  manifest.xml
forge-shell/src/: main.rs
forge-system/: build.sh  forge-dm  forge-dm.qml  install.conf
forge-system/limine/: limine.conf
forge-system/oobe/: forge-oobe.sh
forge-system/pacman/: pacman.conf
forge-system/plymouth/: forge.plymouth
forge-theme/colors/: Forge.colors
forge-theme/kwin/: kwinrc
forge-theme/plasma/look-and-feel/: metadata.desktop
forge-theme/plasma/look-and-feel/contents/layouts/: defaults
forge-theme/plasma/look-and-feel/contents/splashes/: metadata.desktop
forge-webui/: package.json  tsconfig.json
forge-webui/src/: bridge.ts
forge-webui/src/themes/: default.ts
forge-webui/src/widgets/: Widget.ts
packaging/: PKGBUILD
pam/: forge-greeter  forge-session
scripts/: forge-apply.sh  forge-install-helper.sh  forge-power.sh  generate-shell-data.sh  install-system-files.sh
systemd/: forge-compositor.service  forge-greeter.service  forge-notifications.service  forge-privilege.service  forge-session.service
xdg-autostart/: forge.desktop
