[package]
name = "forge-clip"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forge DE clipboard manager"

[[bin]]
name = "forge-clip"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
