[package]
name = "forge-greeter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forge DE display manager and login greeter"

[[bin]]
name = "forge-greeter"
path = "src/main.rs"

[dependencies]
smithay = { workspace = true, default-features = false, features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "renderer_gl",
    "use_system_lib",
]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
nix = { version = "0.29", features = ["user", "signal", "process", "fs"] }
users = "0.11"
winit = "0.30"
