[package]
name = "forge-notifications"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forge DE notification daemon"

[[bin]]
name = "forge-notifications"
path = "src/main.rs"

[lib]
name = "forge_notifications"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
