[package]
name = "forge-session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forge DE session manager"

[[bin]]
name = "forge-session"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
