[package]
name = "forge-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forge DE desktop shell"

[[bin]]
name = "forge-shell"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
